--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           </a>
         </div>
         <ul>
-          <li><a href="#">Schedule</a></li>
-          <li class="dropdown"><a class="dropbtn" href="#">Destinations</a>
+          <li><a href="#">SCHEDULE</a></li>
+          <li class="dropdown"><a class="dropbtn" href="#">DESTINATIONS</a>
             <div class="dropdown-content">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
@@ -27,7 +27,7 @@
               <a href="#">Link 3</a>
             </div>
           </li>
-          <li class="dropdown"><a class="dropbtn" href="#">Activities</a>
+          <li class="dropdown"><a class="dropbtn" href="#">ACTIVITIES</a>
             <div class="dropdown-content">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
@@ -38,7 +38,7 @@
               <a href="#">Link 3</a>
             </div>
           </li>
-          <li class="dropdown"><a class="dropbtn" href="#">Planning</a>
+          <li class="dropdown"><a class="dropbtn" href="#">PLANNING</a>
             <div class="dropdown-content">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
@@ -48,7 +48,7 @@
               <a href="#">Link 3</a>
             </div>
           </li>
-          <li class="dropdown"><a class="dropbtn" href="#">About</a>
+          <li class="dropdown"><a class="dropbtn" href="#">ABOUT</a>
             <div class="dropdown-content">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
@@ -56,7 +56,7 @@
               <a href="#">Link 1</a>
             </div>
           </li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
       <div class="hero-text">
@@ -71,6 +71,84 @@
       </div>
       <div class="hero-button">
         <button type="button" name="button">EXPLORE BELOW</button>
+      </div>
+    </section> <!-- end hero section -->
+    <section class="collage">
+      <nav class="collage-navbar">
+        <ul>
+          <li id="home"><a href="#">Home</a></li>
+          <li><a href="#">Rafting</a></li>
+          <li><a href="#">Backpacking</a></li>
+          <li><a href="#">Canoe</a></li>
+          <li id="dropdown-collage" class="dropdown"><a class="dropbtn" href="#">More</a>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+            </div>
+          </li>
+        </ul>
+        <div class="search">
+          <a href="#">Search</a>
+        </div>
+      </nav>
+      <div class="gallery-container">
+        <div class="gallery">
+          <div class="icon">
+            <img src="img/icon-raft.svg" alt="" />
+          </div>
+          <div class="trip-text">
+            <div class="trip-sep"></div>
+            <h2>RAFTING TRIPS</h2>
+          </div>
+        </div>
+        <div class="gallery">
+          <div class="icon">
+            <img src="img/icon-basecamp.svg" alt="" />
+          </div>
+          <div class="trip-text">
+            <div class="trip-sep"></div>
+            <h2>BASE CAMP TRIPS</h2>
+          </div>
+        </div>
+        <div class="gallery">
+          <div class="icon">
+            <img src="img/icon-backpacking.svg" alt="" />
+          </div>
+          <div class="trip-text">
+            <div class="trip-sep"></div>
+            <h2>BACKPACKING TRIPS</h2>
+          </div>
+        </div>
+        <div class="gallery">
+          <div class="icon">
+            <img src="img/icon-canoe.svg" alt="" />
+          </div>
+          <div class="trip-text">
+            <div class="trip-sep"></div>
+            <h2>CANOE TRIPS</h2>
+          </div>
+        </div>
+        <div class="gallery">
+          <div class="icon">
+            <img src="img/icon-photography.svg" alt="" />
+          </div>
+          <div class="trip-text">
+            <div class="trip-sep"></div>
+            <h2>PHOTOGRAPHY TRIPS</h2>
+          </div>
+        </div>
+        <div class="gallery">
+          <div class="icon">
+            <img src="img/icon-custom.svg" alt="" />
+          </div>
+          <div class="trip-text">
+            <div class="trip-sep"></div>
+            <h2>CUSTOM TRIPS</h2>
+          </div>
+        </div>
       </div>
     </section>
   </body>
